--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>decapay</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
