--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
 env:
   ECS_CLUSTER: decapay-api                 
   ECS_SERVICE: decapay-api-service                 
-  ECS_TASK_DEFINITION: ./task-definition.json 
+  ECS_TASK_DEFINITION: task-definition.json 
   CONTAINER_NAME: decapay-api-container 
   ECR_REPOSITORY: decapay-api          
   AWS_REGION: us-east-2                   
