--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+   
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn clean install
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
