--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,20 @@ spring:
   web:
     resources:
       add-mappings: true
+  mail:
+    host: smtp.gmail.com
+    password: mydevemail20201#
+    username: mydevemail2020@gmail.com
+    properties:
+      mail:
+        transport:
+          protocol: smtp
+        smtp:
+          port: 587
+          auth: true
+          starttls:
+            enable: true
+            required: true
 
     # =============SERVER==================
 server:
