feat: Add Publish Password Email and Email Service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,23 @@ spring:
   web:
     resources:
       add-mappings: true
+  # ===============================
+  # = MAIL
+  # ===============================
+  mail:
+    host: smtp.gmail.com
+    password: mydevemail20201#
+    username: mydevemail2020@gmail.com
+    properties:
+      mail:
+        transport:
+          protocol: smtp
+        smtp:
+          port: 587
+          auth: true
+          starttls:
+            enable: true
+            required: true
 
     # =============SERVER==================
 server:
@@ -35,3 +52,15 @@ management:
       exposure:
         include: "*"
 
+config.emailSender: ${DEFAULT_EMAIL_SENDER:default}
+config.emailSender.region: us_west_2
+
+amazonProperties:
+  region: ${AWS_REGION:us-east-1}
+  endpointUrl: ${AWS_ENDPOINT_URL:https://s3.us-east-1.amazonaws.com}
+  accessKey: ${AWS_ACCESS_KEY:}
+  secretKey: ${AWS_SECRET:}
+  bucketName: ${AWS_BUCKET_NAME:decagon-decapay}
+  smtpHost: ${AWS_SMTP_HOST:}
+  smtpUserName: ${AWS_SMTP_USERNAME:}
+  smtpPassword: ${AWS_SMTP_PASSWORD:}
