feat: Change Publish Forgot Password Implementation to handle multiple devices

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   # ===============================
   mail:
     host: smtp.gmail.com
-    password: mydevemail20201#
+    password: qwqdgxaagvrzpqhi
     username: mydevemail2020@gmail.com
     properties:
       mail:
