--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Set env file and vars
+      run: |
+        touch .env
+        echo SPRING_ACTIVE_PROFILE=prod >> .env
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
