--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: cat
       run: cat src/main/resources/application.yml
     - name: Set up JDK 17
       uses: actions/setup-java@v3
