--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -28,9 +28,14 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate.ddl-auto: update
-    generate-ddl: true
+    hibernate.ddl-auto: none
+    generate-ddl: false
     show-sql: false
   jackson:
     serialization:
       fail-on-empty-beans: false
+
+---
+spring:
+  flyway:
+    enabled: true
