--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 server:
   port: ${PORT:5000}
   servlet:
-    context-path: /${CONTEXT_PATH:decapay}
+    context-path: /${CONTEXT_PATH:}
 
 
     # ============API===================
