--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,10 @@ services:
     environment:
       - POSTGRES_USER=decapay
       - POSTGRES_PASSWORD=password
+
+  mailhog:
+    image: mailhog/mailhog
+    container_name: 'mailhog'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
